[gd_scene load_steps=5 format=3 uid="uid://bhwsvom881mw7"]

[ext_resource type="Theme" uid="uid://dgun6mrtmm8wo" path="res://Resources/Themes/ActionMenuButton/NormalMenuTheme.tres" id="1_f1vpy"]
[ext_resource type="Script" path="res://Scripts/UI/ExtendedMenuButton.gd" id="2_xdd1y"]
[ext_resource type="Theme" uid="uid://ci8ova63ign7o" path="res://Resources/Themes/ExtendedMenuButton/ExtendedMenuButton_theme.tres" id="3_0yeye"]
[ext_resource type="Texture2D" uid="uid://4kop1u88va1t" path="res://Media/icons/generic_item.svg" id="4_lu4ls"]

[node name="ExtendedMenuButton" type="Button"]
custom_minimum_size = Vector2(150, 50)
offset_left = -75.0
offset_top = -25.0
offset_right = 75.0
offset_bottom = 25.0
theme = ExtResource("1_f1vpy")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_xdd1y")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
offset_right = 150.0
offset_bottom = 50.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 5

[node name="AspectRatioContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(145, 45)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="MarginContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0yeye")
text = "Action name"

[node name="DamageRangeLabel" type="Label" parent="MarginContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0yeye")
text = "Damage / Range"

[node name="TagsLabel" type="Label" parent="MarginContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0yeye")
theme_type_variation = &"TagLabel"
text = "tags"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="CostIcon1" type="TextureRect" parent="MarginContainer/AspectRatioContainer/VBoxContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("4_lu4ls")
expand_mode = 3

[node name="CostIcon2" type="TextureRect" parent="MarginContainer/AspectRatioContainer/VBoxContainer2"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("4_lu4ls")
expand_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
